# cv_reportlab

./: 01.ipynb  main.py  pyproject.toml  utils.py
inputs/: cv.yaml  cv_comprehensive.yaml  cv_minimal.yaml
