[tool.poetry]
name = "cv-reportlab"
version = "0.1.0"
description = ""
authors = ["ccosnett <conorcosnett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.2"
ipykernel = "^6.29.5"
reportlab = "4.1.0"
pyyaml = "6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
